# pluginlib_ros_mytutorial

./: .travis.yml  README.md
pluginlib_animal_base/: CMakeLists.txt  package.xml
pluginlib_arrayutil_base/: CMakeLists.txt  package.xml
pluginlib_arrayutil_base/include/pluginlib_arrayutil_base/: arrayutil_base.h
pluginlib_arrayutil_base/src/: arrayutil_base.cpp
pluginlib_arrayutil_client/: CMakeLists.txt  package.xml
pluginlib_arrayutil_client/launch/: pluginlib_arrayutil_client.launch
pluginlib_arrayutil_client/src/: plugin_client.cpp
pluginlib_arrayutil_sub/: CMakeLists.txt  arrayutil_plugins.xml  package.xml
pluginlib_arrayutil_sub/include/pluginlib_arrayutil_sub/: ave.h  max.h  min.h  sum.h
pluginlib_arrayutil_sub/src/: ave.cpp  max.cpp  min.cpp  plugin_client.cpp  sum.cpp
pluginlib_arrayutil_sub/test/: pluginlib_arrayutil_sub.test  pluginlib_arrayutil_sub_test.cpp
